--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 main:
   - title: "Home"
+    url: https://4rlekiing.net/
+  - title: "Menú"
     url: /
   - title: "Artículos"
     url: /year-archive/
